--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "migrate": "truffle migrate --network bscTestnet --reset",
     "compile": "truffle compile --network bscTestnet",
-    "test": "npx builder test",
+    "test": "npx buidler test",
     "coverage": "npx builder coverage"
   },
   "dependencies": {
